--- a/LBW/Views/GM/Recepcion.cshtml
+++ b/LBW/Views/GM/Recepcion.cshtml
@@ -173,7 +173,7 @@
 
                         columns.AddFor(m => m.TextID).Caption("Muestra");
                         columns.AddFor(m => m.Fecha).Caption("Fecha").Width(330)
-                            .Format("yyyy-MM-dd")
+                            .Format("dd/MM/yyyy")
                         .SortOrder(SortOrder.Desc);
                     })
  
